--- a/scss/_responzive.scss
+++ b/scss/_responzive.scss
@@ -24,7 +24,42 @@
 			}
 		}
 	}
+
+	/*Main Section*/
+	.main_page{
+		display: flex;
+			justify-content: center;
+			align-items: center;
+
+			
+		&__container{
+			width: 85vh;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+
+			& h1{
+				font-size: 1.7rem;
+				width: 70%;
+			}
+	
+			& h1 span{
+				font-size: 2.6rem;
+			}
+	
+		}
+		&-button__container{
+			width: 70%;
+			
+			& .work_btn{
+				height: 6.5rem;
+				width: 6.5rem;
+			}
+
+		}
+	}
 }
+
 
 @include media-md {
 	.navbar {
@@ -79,6 +114,43 @@
             &.is-active .line:nth-child(3){
                 transform: translateY(-3px) rotate(-45deg);
             }
+		}
+	}
+
+	.main_page{
+		padding: 0;
+		&__container{
+			width: 100%;
+			height: 90%;
+			justify-content: space-between;
+			padding: 0;
+
+			& h1{
+				font-size: 1.4rem;
+				width: 70%;
+			}
+	
+			& h1 span{
+				font-size: 2rem;
+			}
+		}
+		&-button__container{
+			flex-direction: column;
+			justify-content: space-evenly;
+			width: 50%;
+			height: 50%;
+
+			& .work_btn{
+				height: 5rem;
+				width: 5rem;
+
+				& a{
+					font-size: 0.7rem;
+				}
+			}
+		}
+		& p{
+			font-size: 0.85rem;
 		}
 	}
 }
