--- a/scss/_responzive.scss
+++ b/scss/_responzive.scss
@@ -122,7 +122,7 @@
 		&__container{
 			width: 100%;
 			height: 90%;
-			justify-content: space-between;
+			justify-content: space-evenly;
 			padding: 0;
 
 			& h1{
@@ -141,9 +141,7 @@
 			height: 50%;
 
 			& .work_btn{
-				height: 5rem;
-				width: 5rem;
-
+				
 				& a{
 					font-size: 0.7rem;
 				}
