--- a/scss/style.css
+++ b/scss/style.css
@@ -302,9 +302,9 @@
   .main_page__container {
     width: 100%;
     height: 90%;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
     padding: 0;
   }
   .main_page__container h1 {
@@ -324,10 +324,6 @@
             justify-content: space-evenly;
     width: 50%;
     height: 50%;
-  }
-  .main_page-button__container .work_btn {
-    height: 5rem;
-    width: 5rem;
   }
   .main_page-button__container .work_btn a {
     font-size: 0.7rem;
