dodavanje media screen za 1600px

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -34,3 +34,8 @@ $navbar-background-color: rgb(85, 57, 57);
         @content;
     }
 }
+@mixin media-xl{
+    @media screen and (max-width:1600px){
+        @content;
+    }
+}
