--- a/scss/style.css
+++ b/scss/style.css
@@ -171,6 +171,128 @@
   width: 70%;
 }
 
+.projects {
+  width: 100vw;
+  height: 120vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 1rem;
+  background: #181212;
+}
+
+.projects__container {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.projects__container h1 {
+  font-size: 2.5rem;
+}
+
+.projects__menu {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 2rem;
+}
+
+.projects__menu-list {
+  margin: 2rem 0;
+  position: relative;
+  height: 30vh;
+  width: 20vw;
+  overflow: hidden;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  cursor: pointer;
+}
+
+.projects__menu-list img {
+  height: 90%;
+  width: 100%;
+}
+
+.projects__menu-list p {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.projects__menu-list::after {
+  content: "";
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  height: 90%;
+  width: 100%;
+  background: #d4c0c0;
+  opacity: 0;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.projects__menu-list:hover::after {
+  bottom: 10%;
+  opacity: 0.9;
+}
+
+.projects__menu-list:hover i, .projects__menu-list:hover a {
+  opacity: 1;
+}
+
+.projects__btn {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+.projects__btn i, .projects__btn a {
+  opacity: 0;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.projects__btn a {
+  text-decoration: none;
+  color: #000;
+}
+
+@media screen and (max-width: 1600px) {
+  .projects__menu-list {
+    width: 25vw;
+  }
+}
+
 @media screen and (max-width: 1024px) {
   .navbar__container {
     -webkit-box-pack: space-evenly;
@@ -232,14 +354,31 @@
     height: 6.5rem;
     width: 6.5rem;
   }
+  /*project section*/
+  .projects {
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    margin-top: 2.5rem;
+  }
+  .projects__container h1 {
+    font-size: 2rem;
+  }
+  .projects__menu {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    grid-gap: 1.5rem;
+  }
+  .projects__menu-list {
+    margin: 1.5rem 0;
+    width: 35vw;
+  }
 }
 
 @media screen and (max-width: 650px) {
   .navbar__menu {
     position: absolute;
     top: -100%;
-    width: 100%;
-    height: 70vh;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -263,6 +402,8 @@
     opacity: 1;
     top: 0%;
     z-index: 10;
+    width: 100%;
+    height: 70vh;
     -webkit-transition: all 0.5s ease;
     transition: all 0.5s ease;
   }
@@ -296,6 +437,7 @@
     -webkit-transform: translateY(-3px) rotate(-45deg);
             transform: translateY(-3px) rotate(-45deg);
   }
+  /*Menu section*/
   .main_page {
     padding: 0;
   }
@@ -330,6 +472,18 @@
   }
   .main_page p {
     font-size: 0.85rem;
+  }
+  /*Project section*/
+  .projects__container h1 {
+    font-size: 1.7rem;
+  }
+  .projects__menu {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .projects__menu-list {
+    margin: 2.5rem 0;
+    width: 50vw;
   }
 }
 
