--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -6,6 +6,7 @@
 	align-items: center;
 	padding: 0 1rem;
 	background: $background-color;
+	@include border-bottom;
 
 	&__container {
 		width: 100%;
