--- a/scss/style.css
+++ b/scss/style.css
@@ -198,6 +198,7 @@
           align-items: center;
   padding: 0 1rem;
   background: #181212;
+  border-bottom: solid white 1px;
 }
 
 .projects__container {
