dodavanje boje za footer i navbar

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,11 +1,9 @@
 $background-color: rgb(24, 18, 18);
 $primary-text-color: rgb(212, 192, 192);
 $hover-text-color: rgb(32, 110, 146);
-$footer-background:rgba(92, 44, 44, 0.7);
+$footer-navbar-background:rgba(92, 44, 44, 0.7);
 $skills-background: rgb(158, 146, 36);
 $light-text-color: rgb(145, 89, 89);
-$navbar-background-color: rgb(85, 57, 57);
-
 
 *{
     margin: 0;
