--- a/scss/style.css
+++ b/scss/style.css
@@ -301,6 +301,130 @@
   color: #000;
 }
 
+.footer {
+  width: 100vw;
+  height: 55vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 1rem;
+  background: rgba(92, 44, 44, 0.7);
+}
+
+.footer__container {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  padding: 1rem;
+}
+
+.footer-icons__container {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  padding: 3rem 0;
+  position: relative;
+}
+
+.footer__menu, .footer-contact__container, .footer-social_media {
+  height: 100%;
+  width: 25%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.footer__menu a, .footer-contact__container a, .footer-social_media a {
+  color: #d4c0c0;
+  text-decoration: none;
+  font-size: 1.1rem;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.footer__menu a:hover, .footer-contact__container a:hover, .footer-social_media a:hover {
+  color: #206e92;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.footer__menu a {
+  text-transform: uppercase;
+}
+
+.footer-contact__container i, .footer-social_media i {
+  font-size: 1.4rem;
+  margin-right: 0.5rem;
+}
+
+.footer-arrow__container {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.footer-arrow__container button {
+  height: 2.5rem;
+  width: 2.5rem;
+  border: none;
+  border-radius: 50%;
+  background: #d4c0c0;
+  cursor: pointer;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.footer-arrow__container button:hover {
+  -webkit-box-shadow: 0 0 15px #d4c0c0;
+          box-shadow: 0 0 15px #d4c0c0;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+.footer-arrow__container button i {
+  color: #181212;
+  font-weight: bold;
+}
+
 @media screen and (max-width: 1600px) {
   .projects__menu-list {
     width: 25vw;
@@ -408,7 +532,7 @@
             align-items: center;
     opacity: 0;
     z-index: -1;
-    background-color: #553939;
+    background-color: #181212;
     -webkit-transition: all 0.5s ease;
     transition: all 0.5s ease;
   }
