--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,7 +1,7 @@
 .main_page{
     height: 90vh;
     width: 100vw;
-    padding: 0 2rem;
+    padding: 2rem 4rem;
     background: linear-gradient(to bottom rgba(0,0,0,0.7),rgba(24, 18, 18, 0.6)), url('../img/bg_developers.webp');
     background-size: cover;
     background-position: right;
@@ -42,9 +42,11 @@
             border-radius: 50%;
             background: $background-color;
             cursor: pointer;
+            @include transition-ease;
 
             &:hover{
-                box-shadow: 0 0 15px rgba(0,0,0,0.7);
+                box-shadow: 0 0 20px rgba(0,0,0,0.7);
+                @include transition-ease;
             }
 
             & a{
