--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,8 +1,7 @@
 $background-color: rgb(24, 18, 18);
 $primary-text-color: rgb(212, 192, 192);
 $hover-text-color: rgb(32, 110, 146);
-$footer-navbar-background:rgba(92, 44, 44, 0.7);
-$skills-background: rgb(158, 146, 36);
+$footer-background:rgba(92, 44, 44, 0.8);
 $light-text-color: rgb(145, 89, 89);
 
 *{
