--- a/scss/style.css
+++ b/scss/style.css
@@ -25,6 +25,7 @@
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  background: #181212;
   border-bottom: solid white 1px;
 }
 
@@ -106,7 +107,7 @@
 .main_page {
   height: 90vh;
   width: 100vw;
-  padding: 0 2rem;
+  padding: 2rem 4rem;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(24, 18, 18, 0.6))), url("../img/bg_developers.webp");
   background: linear-gradient(to bottom rgba(0, 0, 0, 0.7), rgba(24, 18, 18, 0.6)), url("../img/bg_developers.webp");
   background-size: cover;
@@ -164,11 +165,15 @@
   border-radius: 50%;
   background: #181212;
   cursor: pointer;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 .main_page-button__container .work_btn:hover {
-  -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
-          box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+          box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 .main_page-button__container .work_btn a {
@@ -314,7 +319,7 @@
       -ms-flex-align: center;
           align-items: center;
   padding: 0 1rem;
-  background: rgba(92, 44, 44, 0.7);
+  background: rgba(92, 44, 44, 0.8);
 }
 
 .footer__container {
@@ -371,6 +376,7 @@
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+  border-right: 1px solid #d4c0c0;
 }
 
 .footer__menu a, .footer-contact__container a, .footer-social_media a {
@@ -509,7 +515,7 @@
   }
   .projects__menu-list {
     margin: 1.5rem 0;
-    width: 35vw;
+    width: 40vw;
   }
   /**Footer section*/
   .footer__menu a, .footer-contact__container a, .footer-social_media a {
@@ -636,7 +642,7 @@
   }
   .projects__menu-list {
     margin: 2.5rem 0;
-    width: 50vw;
+    width: 60vw;
   }
   /**Footer section*/
   .footer {
