--- a/scss/_responzive.scss
+++ b/scss/_responzive.scss
@@ -175,7 +175,7 @@
 		padding: 0;
 		&__container {
 			width: 100%;
-			height: 90%;
+			height: 100%;
 			justify-content: space-evenly;
 			padding: 0;
 
@@ -205,6 +205,38 @@
 		}
 	}
 
+	/**experience section*/
+	.experience{
+
+		&__container{
+	
+			& h1{
+				font-size: 2rem;
+			}
+		}
+		&_tables{
+			width: 100%;
+		}
+	
+		&_table{
+			width: 90%;
+
+			& h2{
+				font-size: 1.3rem;
+			}
+
+			& h3{
+				font-size: 1.1rem;
+			}
+
+			& p{
+				font-size: 0.8rem;
+			}
+		}
+	}
+
+
+
 	/*Project section*/
 	.projects {
 		&__container {
@@ -218,7 +250,7 @@
 
 			&-list {
 				margin: 2.5rem 0;
-				width: 60vw;
+				width: 65vw;
 			}
 		}
 	}
@@ -259,4 +291,6 @@
 		}
 		
 	}
+
+
 }
