--- a/scss/style.css
+++ b/scss/style.css
@@ -665,7 +665,7 @@
     cursor: pointer;
     z-index: 998;
   }
-  .navbar__hamburger .line {
+  .navbar__hamburger-line {
     width: 27px;
     height: 3px;
     margin: 5px 2px;
@@ -674,14 +674,16 @@
     -webkit-transition: all 0.5s ease;
     transition: all 0.5s ease;
   }
-  .navbar__hamburger.is-active .line:nth-child(2) {
-    opacity: 0;
+  .navbar__hamburger-line.open:nth-child(2) {
+    -webkit-transform: rotate(720deg);
+            transform: rotate(720deg);
+    background: transparent;
   }
-  .navbar__hamburger.is-active .line:nth-child(1) {
+  .navbar__hamburger-line.open:nth-child(1) {
     -webkit-transform: translateY(13px) rotate(45deg);
             transform: translateY(13px) rotate(45deg);
   }
-  .navbar__hamburger.is-active .line:nth-child(3) {
+  .navbar__hamburger-line.open:nth-child(3) {
     -webkit-transform: translateY(-3px) rotate(-45deg);
             transform: translateY(-3px) rotate(-45deg);
   }
