--- a/scss/style.css
+++ b/scss/style.css
@@ -25,8 +25,7 @@
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  background: #181212;
-  border-bottom: solid white 1px;
+  background: rgba(24, 18, 18, 0.7);
 }
 
 .navbar__container {
